<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sitharawanigasooriy.ma.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/holo_blue_dark"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:contentDescription=""
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/profile_Name"
                android:textColor="#fff"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="125dp"
            app:cardBackgroundColor="@android:color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.58"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:padding="5dp"
                        android:text="@string/Name"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:padding="5dp"
                        android:text="@string/email"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:padding="5dp"
                        android:text="@string/password"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/ic_phone_android_black_24dp"
                        android:padding="5dp"
                        android:text="@string/mobile"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:ignore="RtlHardcoded" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/change"
                        android:background="@drawable/login_button_background"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.38"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/NameHint"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/emailHint"
                        android:padding="5dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/passwordHint"
                        android:padding="5dp"
                        android:textColorHint="@android:color/white"
                        android:textSize="15sp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/mobileHint"
                        android:padding="5dp"
                        android:textColorHint="@android:color/white"
                        android:textSize="15sp"
                        tools:ignore="RtlHardcoded" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="57dp"
                        android:background="@drawable/login_button_background"
                        android:text="@string/save"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>
